Update Coming Soon text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <main>
             <img alt="Logo" src="logo.png" width="250px" height="250px">
             <h1>Utilitarian by Alexandria</h1>
-            <h2>Coming December 1st, 2023...</h2>
+            <h2>Coming Soon...</h2>
             <form action="https://utilitarian-by-alexandria-kfrmt.ondigitalocean.app/utilitarian-by-alexandria/subscribe" method="POST">
                 <input placeholder="Enter your email" name="email" type="email">
                 <input type="submit" value="Subscribe">
