Update "Coming Soon" text

--- a/subscribed.html
+++ b/subscribed.html
@@ -7,7 +7,7 @@
         <main>
             <img alt="Logo" src="logo.png" width="250px" height="250px">
             <h1>Utilitarian by Alexandria</h1>
-            <h2>Coming December 1st, 2023...</h2>
+            <h2>Coming Soon...</h2>
             <p>Subscribed</p>
         </main>
     </body>
